--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -132,7 +132,7 @@ module-margin-right = 0
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 font-0 = "Cozette:size=10;2"
-font-1 = "Wuncon Siji:style=Regular;size=12;2"
+font-1 = "siji:style=Regular;size=12;2"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
