--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -293,7 +293,7 @@ format-padding = 1
 
 [module/dwm]
 type = internal/dwm
-format = <label-tags> <label-layout> <label-floating> <label-title>
+format = <label-tags> <label-layout> <label-floating>
 ; Path to dwm socket (default: /tmp/dwm.sock)
 ; socket-path = /tmp/dwm.sock
 
